# cocos2dx-legend-of-world

./: README.md
LegendOfWorldProject/: Android.mk  CMakeLists.txt  runSimulator.sh
LegendOfWorldProject/Classes/: AboutScene.cpp  AboutScene.h  AppDelegate.cpp  CScene.cpp  CScene.h  ChooseHeroScene.h  Definitons.h  EndGameScene.cpp  EndGameScene.h  LoadingScene.cpp  LoadingScene.h  LoadingScene_HardestLevel.cpp  LoadingScene_HardestLevel.h  LoadingScene_MidlleLevel.cpp  LoadingScene_MidlleLevel.h  MainMenuScene.cpp  MainMenuScene.h  MarketplaceScene.cpp  MarketplaceScene.h  PlayGameScene.cpp  PlayGameScene.h  PlayGameScene_HardestLevel.cpp  PlayGameScene_HardestLevel.h  PlayGameScene_MiddleLevel.cpp  PlayGameScene_MiddleLevel.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  SettingGameScene.cpp  SettingGameScene.h  SplashScene.cpp  SplashScene.h
LegendOfWorldProject/Classes/PlaySceneFile/BaseClasses/: CChampion.cpp  CChampion.h  CDynamicObject.cpp  CDynamicObject.h  CMonster.cpp  CMonster.h  CObject.cpp  CObject.h  CPoint.cpp  CPoint.h  CSkill.cpp  CSkill.h  CStaticObject.h  GameStates.h  InputEnum.h  Joystick.cpp  Joystick.h  LevelPoint.h  MonsterStates.cpp  MonsterStates.h  MyProgressingBar.cpp  MyProgressingBar.h  PlayerStates.cpp  PlayerStates.h
LegendOfWorldProject/Classes/PlaySceneFile/Champions/: CChampionManager.cpp  CChampionManager.h  CChampion_ElfArcher_1.h  CChampion_ElfFairy_1.h  CChampion_Golem_1.h  CChampion_Knight_1.h  CChampion_Knight_2.cpp  CChampion_Knight_2.h  CChampion_Knight_3.cpp  CChampion_Knight_3.h  CChampion_Orc_1.cpp
LegendOfWorldProject/Classes/PlaySceneFile/Maps/: CBaseMap.cpp  CBaseMap.h  CMap_Prototype.cpp  CMap_Prototype.h
LegendOfWorldProject/Classes/PlaySceneFile/Monsters/: CMonsterManager.cpp  CMonsterManager.h
LegendOfWorldProject/Classes/PlaySceneFile/OtherSprites/: CBuilding.h  CStaticSprite.h
LegendOfWorldProject/Classes/PlaySceneFile/UI/JoyStick/SneakyInput/: SneakyButton.h  SneakyJoystick.cpp  tempjoystick.txt
LegendOfWorldProject/GDD/: ChampionandSkills.docx
LegendOfWorldProject/Map/: Tiled_map_Source_Link.txt
LegendOfWorldProject/Resources/: Champions.txt  MapAngel.tmx  MapDevil.tmx  MapofQuynh.tmx  Monster_02.txt  Textures.plist  TexturesPrototype.plist  Textures_Creeps.plist  Textures_EarthGolem.plist  Textures_FireGolem.plist  Textures_IceGolem.plist  Textures_Jungles.plist  Textures_Knight.plist  Textures_Monster_1_5.plist
LegendOfWorldProject/Resources/Champions/: Elf_01.txt  Elf_02.txt  Elf_03.txt  Elf_Fairy_01.txt  Fairy_01.txt  Fairy_02.txt  Fairy_03.txt  Golem_01.txt  Golem_02.txt  Golem_03.txt  Knight_01.txt  Knight_02.txt  Knight_03.txt  Readme.txt  TinyGolem_01.txt  TinyGolem_02.txt  TinyGolem_03.txt
LegendOfWorldProject/Resources/Monsters/: TinyGolem_01.txt  TinyGolem_02.txt  TinyGolem_03.txt  TinyGolem_04.txt  TinyGolem_05.txt  TinyGolem_06.txt  TinyGolem_07.txt  TinyGolem_08.txt  TinyGolem_09.txt
